# timegpy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Alternatives.rst  Fitness.rst  Quickstart.rst  conf.py  index.rst
docs/doctrees/: Alternatives.doctree  Fitness.doctree  Quickstart.doctree  environment.pickle  index.doctree
docs/html/: .buildinfo  Alternatives.html  Fitness.html  Quickstart.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: Fitness.rst.txt  Quickstart.rst.txt
notebooks/: 01 Machine Learning_Classification.ipynb
tests/: test_main_functions.py  test_tsgp.py
timegpy/: calculate_program_size.py  checks.py  classes.py  create.py  crossover.py  evaluate_expression.py  evaluate_program_wrapper.py  evaluate_tree.py  fitness.py  generate_random_tree.py  get_all_nodes.py  gp.py  mutation.py  operators.py  parsers.py  plots.py  replace_node.py  tsgp.py
