[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timegpy"
version = "0.1.0"
authors = [
    {name = "Trent Henderson"},
    {email = "then6675@uni.sydney.edu.au"},
]
maintainers = [
    {name = "Trent Henderson"},
    {email = "then6675@uni.sydney.edu.au"},
]
description = "Find informative time-average features using genetic programming"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies=["numpy", "pandas", "matplotlib", "scikit-learn", "scipy", "tqdm", "sphinx_rtd_theme"]
keywords=[
    "time series",
    "classification",
    "time series features",
    "genetic algorithm",
    "genetic programming"
]
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
"GitHub Repository (timegpy)" = "https://github.com/hendersontrent/timegpy"